# MarketsGym

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
marketsgym/agents/: README.md
marketsgym/envs/: README.md
marketsgym/utils/data/: README.md
notebooks/: example.ipynb
