[tool.poetry]
name = "marketsgym"
version = "0.1.0"
description = "Gym based environments for different trading problems."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.2"
pre-commit = "^2.13.0"
pytest-cov = "2.12.1"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.pytest.ini_options]
addopts = """
    --verbose
    --junitxml build/reports/unittest.xml
    -p no:warnings
    -m 'not integration'
    --tb=short -rEf
    --cov pearll
    --cov-config=.coveragerc
    --cov-report xml:build/reports/coverage.xml
    --cov-report term
    --color=yes
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
